# esp-idf-ble-server

./: .gitignore  CMakeLists.txt  README.md
components/ble/: CMakeLists.txt  ble.c  ble.h  ble_gap.c  ble_gatts.c  ble_wifi_service.c
components/ble/service_callbacks/: ble_secruity_service.c  ble_security_service.h  ble_security_service_enc_dec.c  ble_security_service_enc_dec.h  ble_security_srv_pkt_handler.c  ble_security_srv_pkt_handler.h  ble_wifi_service.c
main/: CMakeLists.txt  main.c
